--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,12 @@ dependencies:
   mapbox_gl: ^0.12.0
   location: ^4.3.0
   gap: ^2.0.0
-  sqflite: ^2.0.0
-
+  sqflite: ^2.0.0+4
+  image_picker: ^0.8.4+2
+  cross_file: ^0.3.1+5
+  image_gallery_saver: '^1.7.0'
+  path_provider: ^2.0.5
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
