--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,9 @@ dependencies:
   sqflite: ^2.0.0+4
   image_picker: ^0.8.4+2
   cross_file: ^0.3.1+5
-  image_gallery_saver: '^1.7.0'
+  image_gallery_saver: ^1.7.0
   path_provider: ^2.0.5
+  http: ^0.13.4
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
