--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
   path_provider: ^2.0.5
   http: ^0.13.4
   amplify_flutter: ^0.2.5
-  amplify_auth_cognito: ^0.2.5
   amplify_api: ^0.2.5
+  minio: ^3.0.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
