--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  mapbox_gl: ^0.12.0
+  mapbox_gl: ^0.13.0
   location: ^4.3.0
   gap: ^2.0.0
   sqflite: ^2.0.0+4
-  image_picker: ^0.8.4+2
+  image_picker: ^0.8.4+3
   cross_file: ^0.3.1+5
-  image_gallery_saver: ^1.7.0
+  image_gallery_saver: ^1.7.1
   path_provider: ^2.0.5
   http: ^0.13.4
   amplify_flutter: ^0.2.5
@@ -99,15 +99,15 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
 
-dependency_overrides:																																																							
-  mapbox_gl:																																																							
-    git:																																																							
-      url: https://github.com/tobrun/flutter-mapbox-gl.git																																																							
-  mapbox_gl_platform_interface:																																																							
-    git:																																																							
-      url: https://github.com/tobrun/flutter-mapbox-gl.git																																																							
-      path: mapbox_gl_platform_interface																																																							
-  mapbox_gl_web:																																																							
-    git:																																																							
-      url: https://github.com/tobrun/flutter-mapbox-gl.git																																																							
-      path: mapbox_gl_web
+# dependency_overrides:																																																							
+#   mapbox_gl:																																																							
+#     git:																																																							
+#       url: https://github.com/tobrun/flutter-mapbox-gl.git																																																							
+#   mapbox_gl_platform_interface:																																																							
+#     git:																																																							
+#       url: https://github.com/tobrun/flutter-mapbox-gl.git																																																							
+#       path: mapbox_gl_platform_interface																																																							
+#   mapbox_gl_web:																																																							
+#     git:																																																							
+#       url: https://github.com/tobrun/flutter-mapbox-gl.git																																																							
+#       path: mapbox_gl_web
