mpbox_gl 0.13.0 対応および Android を中心としたインストール手順等修正

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:value="2" />
         <meta-data
             android:name="com.mapbox.token"
-            android:value="[Mapbox Access Token or Secret Token here]"
+            android:value="[Mapbox Access Token here]"
             />
     </application>
 </manifest>
