--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   amplify_flutter: ^0.2.6
   amplify_api: ^0.2.6
   minio: ^3.0.0
+  font_awesome_flutter: ^9.2.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
