--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   amplify_api: ^0.2.6
   minio: ^3.0.0
   font_awesome_flutter: ^9.2.0
+  connectivity: ^3.0.6
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
