--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   minio: ^3.0.0
   font_awesome_flutter: ^9.2.0
   connectivity: ^3.0.6
+  postgrest: ^0.1.8
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
