--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   mapbox_gl: ^0.14.0
   location: ^4.3.0
   gap: ^2.0.0
-  sqflite: ^2.0.0+4
+  sqflite: ^2.0.1
   image_picker: ^0.8.4+4
   cross_file: ^0.3.2
   image_gallery_saver: ^1.7.1
@@ -43,7 +43,7 @@ dependencies:
   minio: ^3.0.0
   font_awesome_flutter: ^9.2.0
   connectivity: ^3.0.6
-  supabase: ^0.2.9
+  supabase: ^0.2.10
   share_plus: ^3.0.4
   
   # The following adds the Cupertino Icons font to your application.
