Amplify Flutter以外のライブラリを最新に

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,20 +29,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  mapbox_gl: ^0.14.0
+  mapbox_gl: ^0.15.0
   location: ^4.3.0
   gap: ^2.0.0
-  sqflite: ^2.0.1
-  image_picker: ^0.8.4+4
+  sqflite: ^2.0.2
+  image_picker: ^0.8.4+8
   image_gallery_saver: ^1.7.1
-  path_provider: ^2.0.8
+  path_provider: ^2.0.9
   http: ^0.13.4
   amplify_flutter: ^0.2.10
   amplify_api: ^0.2.10
-  minio: ^3.1.0
+  minio: ^3.5.0
   font_awesome_flutter: ^9.2.0
-  connectivity: ^3.0.6
-  supabase: ^0.2.10
+  connectivity_plus: ^2.2.0
+  supabase: ^0.2.14
   share_plus: ^3.0.4
   
   # The following adds the Cupertino Icons font to your application.
