ライブラリアップデートなど

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,16 +33,16 @@ dependencies:
   location: ^4.3.0
   gap: ^2.0.0
   sqflite: ^2.0.2
-  image_picker: ^0.8.4+11
+  image_picker: ^0.8.5
   image_gallery_saver: ^1.7.1
   path_provider: ^2.0.9
   http: ^0.13.4
-  amplify_flutter: ^0.4.2
-  amplify_api: ^0.4.2
+  amplify_flutter: ^0.4.4
+  amplify_api: ^0.4.4
   minio: ^3.5.0
   font_awesome_flutter: ^10.1.0
   connectivity_plus: ^2.2.1
-  supabase: ^0.3.1
+  supabase: ^0.3.1+1
   share_plus: ^4.0.3
   platform: ^3.1.0
   
