ライブラリアップデート

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,20 +35,20 @@ dependencies:
   sqflite: ^2.0.2+1
   image_picker: ^0.8.5+3
   image_gallery_saver: ^1.7.1
-  path_provider: ^2.0.10
+  path_provider: ^2.0.11
   http: ^0.13.4
   amplify_flutter: ^0.5.1
   amplify_api: ^0.5.1
   minio: ^3.5.0
   font_awesome_flutter: ^10.1.0
-  connectivity_plus: ^2.3.0
-  supabase: ^0.3.4
-  share_plus: ^4.0.4
+  connectivity_plus: ^2.3.3
+  supabase: ^0.3.4+1
+  share_plus: ^4.0.7
   platform: ^3.1.0
   
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.4
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
