--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,18 +32,18 @@ dependencies:
   mapbox_gl: ^0.16.0
   location: ^4.4.0
   gap: ^2.0.0
-  sqflite: ^2.0.3
+  sqflite: ^2.0.3+1
   image_picker: ^0.8.5+3
   image_gallery_saver: ^1.7.1
   path_provider: ^2.0.11
   http: ^0.13.5
-  amplify_flutter: ^0.6.5
-  amplify_api: ^0.6.5
+  amplify_flutter: ^0.6.6
+  amplify_api: ^0.6.6
   minio: ^3.5.0
   font_awesome_flutter: ^10.1.0
-  connectivity_plus: ^2.3.6
+  connectivity_plus: ^2.3.6+1
   supabase: ^0.3.6
-  share_plus: ^4.0.10
+  share_plus: ^4.0.10+1
   platform: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
