share_plus ほかアップデート

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
   location: ^4.4.0
   gap: ^2.0.0
   sqflite: ^2.1.0
-  image_picker: ^0.8.5+3
+  image_picker: ^0.8.6
   image_gallery_saver: ^1.7.1
   path_provider: ^2.0.11
   http: ^0.13.5
@@ -41,9 +41,9 @@ dependencies:
   amplify_api: ^0.6.8
   minio: ^3.5.0
   font_awesome_flutter: ^10.2.1
-  connectivity_plus: ^2.3.7
+  connectivity_plus: ^2.3.8
   supabase: ^0.3.6
-  share_plus: ^4.4.0
+  share_plus: ^4.5.2
   platform: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
