パッケージアップデート

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,17 +33,17 @@ dependencies:
   location: ^4.4.0
   gap: ^2.0.1
   sqflite: ^2.2.3
-  image_picker: ^0.8.6
+  image_picker: ^0.8.6+1
   image_gallery_saver: ^1.7.1
   path_provider: ^2.0.11
   http: ^0.13.5
-  amplify_flutter: ^0.6.11
-  amplify_api: ^0.6.11
+  amplify_flutter: ^0.6.12
+  amplify_api: ^0.6.12
   minio_new: ^1.0.1
   font_awesome_flutter: ^10.3.0
   connectivity_plus: ^3.0.2
   connectivity_plus_web: ^1.2.5
-  supabase: ^1.2.0
+  supabase: ^1.4.0
   share_plus: ^6.3.0
   share_plus_web: ^3.1.0
   platform: ^3.1.0
