--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,7 @@ dependencies:
   font_awesome_flutter: ^10.4.0
   connectivity_plus: ^3.0.3
   connectivity_plus_web: ^1.2.5
-  supabase: ^1.5.1
+  supabase_flutter: ^1.4.0
   share_plus: ^6.3.1
   share_plus_web: ^3.1.0
   platform: ^3.1.0
