--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,27 +30,27 @@ dependencies:
   flutter:
     sdk: flutter
   mapbox_gl: ^0.16.0
-  location: ^4.4.0
-  gap: ^2.0.1
-  sqflite: ^2.2.5
-  image_picker: ^0.8.7
+  location: ^5.0.3
+  gap: ^3.0.1
+  sqflite: ^2.2.8+4
+  image_picker: ^0.8.9
   image_gallery_saver: ^1.7.1
-  path_provider: ^2.0.13
-  http: ^0.13.5
-  amplify_flutter: ^0.6.12
-  amplify_api: ^0.6.12
-  minio_new: ^1.0.1
+  path_provider: ^2.1.1
+  http: ^0.13.6
+  amplify_flutter: ^0.6.13
+  amplify_api: ^0.6.13
+  minio_new: ^1.0.2
   font_awesome_flutter: ^10.4.0
-  connectivity_plus: ^3.0.3
+  connectivity_plus: ^4.0.2
   connectivity_plus_web: ^1.2.5
-  supabase_flutter: ^1.5.0
-  share_plus: ^6.3.1
+  supabase_flutter: ^1.10.8
+  share_plus: ^6.3.4
   share_plus_web: ^3.1.0
-  platform: ^3.1.0
+  platform: ^3.1.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.5
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +61,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.1
+  flutter_lints: ^2.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
